# functionality-dsl

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Comment_parser_model.dot  ENTITY_REUSE_ANALYSIS.md  Makefile  README.md  REDESIGN_SUMMARY.md  REFACTOR_PLAN.md  TESTING_STRATEGY.md  WRAPPING_STANDARDIZATION.md  cookies.txt  print_model.py  pyproject.toml  test_new_syntax.fdsl  test_phase_1_2.py  test_phase_1_2_fixed.py  test_validation.fdsl  textx_model_parse_tree.dot  textx_model_parser_model.dot  wsl_reqs.txt
.claude/: CHEATSHEET.md  README.md  glossary.md  paths.md  quick-ref.md  session-notes.md  settings.json  settings.local.json
.claude/commands/: gen.md  test-ws.md  trace-entity.md  validate.md
.claude/context/: type-schema-syntax.md  ws-patterns.md
.claude/tasks/: debug-websocket.md
.github/workflows/: ci.yml
api/: pyproject.toml
api/app/: main.py
api/app/api/routers/: __init__.py
api/app/core/: config.py
base/app/: database.py  main.py  requirements.txt
docs/: api-dsl-coverage.md  create-vs-read-entities.md  ecommerce_byodb_diagram  entity-crud-design.md  fdsl_metamodel.ecore  finnhub-stocks_diagram  model_diagram  model_diagram.dot  model_metamodel.puml  multi-parent-entities.md  nested-entities_diagram.dot  primitives_diagram  temp.ini
docs/v2/: WEBSOCKET-FINAL-STATUS.md  WEBSOCKET-SIMPLE-GUIDE.md
examples/: README.md  endme.fdsl
examples/air-quality/: main.fdsl
examples/auth-db-demo/: main.fdsl
examples/auth-external-db/: main.fdsl
examples/auth-tests/: apikey-test.fdsl  basic-test.fdsl  jwt-test.fdsl  session-test.fdsl
examples/camera-feed/: README.md  main.fdsl
examples/complex/: BLOCKED_demo_orders.fdsl  demo_orders.fdsl  iot_system.fdsl
examples/delivery-tracking/: README.md  components.fdsl  main.fdsl  run.sh  run_tests.sh
examples/ecommerce/: Dockerfile.dummy  README.md  docker-compose.yml  dummy-service.py  ecommerce.fdsl  ecommerce_byodb.fdsl  ecommerce_full.fdsl  entities.fdsl  main.fdsl  sources.fdsl  ui.fdsl
examples/file-upload/: README.md  curl.md  main.fdsl
examples/finnhub/: finnhub-stocks.fdsl
examples/health-monitoring/: Dockerfile.dummy  docker-compose.yml  dummy-service.py  main.fdsl
examples/iot-sensors/: main.fdsl
examples/json-with-params/: main.fdsl
examples/large-json-test/: README.md  main.fdsl  run.sh_BAK
examples/live-wikipedia/: main.fdsl
examples/medium/: README-demo-user-orders.md  demo_loud_chat.fdsl  demo_sensors.fdsl  demo_user_login.fdsl  demo_user_orders.fdsl  demo_weather.fdsl  run-demo-user-orders.sh  test_user_login.sh
examples/pdf-report-generator/: README.md  curl.md  main.fdsl  run.sh
examples/primitives-test/: primitives.fdsl
examples/rest-auth/: README.md  main.fdsl
examples/rest-basics/: main.fdsl
examples/services/: README-user-orders.md  docker-compose.user-orders.yml  start-user-orders.bat  start-user-orders.sh
examples/simple/: demo_BTC.fdsl  demo_auth.fdsl  demo_auth_ws.fdsl  demo_chat.fdsl  demo_coffee.fdsl  demo_crypto.fdsl  demo_crypto_computed.fdsl  demo_crypto_live.fdsl  demo_deepgram.fdsl  demo_formats.fdsl  demo_gh_posts.fdsl  demo_gh_posts.fdsl_DEPRECATED  demo_integers_plot.fdsl  demo_integers_simple.fdsl  demo_json.fdsl  demo_json_actions.fdsl  demo_json_calculated.fdsl  demo_json_param.fdsl  demo_kraken.fdsl  demo_live_wiki.fdsl  demo_loud_chat.fdsl  demo_simple.fdsl  demo_static_chart.fdsl  demo_users.fdsl  demo_weather.fdsl  hello.fdsl  json_data.fdsl  test.fdsl
examples/simple_crud/: test.fdsl
examples/smart-home/: docker-compose.yml  dummy-service.py  entities.fdsl  main.fdsl  sources.fdsl  testing.md  ui.fdsl
examples/tests/: expr_01_precedence.fdsl  expr_02_parens.fdsl  expr_03_unary.fdsl  expr_04_bool.fdsl  expr_05_chain_cmp.fdsl  expr_07_funcs_ok.fdsl  expr_08_arity_fail.fdsl  expr_09_unknown_func.fdsl  expr_10_list_exprs.fdsl  expr_11_unknown_alias.fdsl  multi_response_test.fdsl  test_headers.fdsl  test_headers_ws.fdsl
examples/text-processing/: README.md  main.fdsl
examples/user-management/: CURL_TESTS.md  README.md  (+8 more)
functionality_dsl/: generate.py  language.py  utils.py
functionality_dsl/base/backend/: pyproject.toml
functionality_dsl/base/backend/app/: main.py
functionality_dsl/base/backend/app/api/routers/: __init__.py
functionality_dsl/base/backend/app/core/: base_service.py  cache.py  computed.py  config.py  content_handler.py  errors.py  expressions.py  http.py  logging.py  observability.py  params.py  primitive_wrapper.py  rest_wrapper.py  service_helpers.py  utils.py  ws_wrapper.py  wsbus.py
functionality_dsl/base/backend/app/templates/: asyncapi.html
scripts/: cleanup.sh  docker_cleanup.sh  generate_all_visualizations.sh  generate_ecore.py  run_ecommerce.bat  run_ecommerce.sh  test_entity_chain_advanced.sh  test_entity_chain_simple.sh  test_path_params.sh  validate_examples.sh
tests/: README.md  conftest.py  expr_03_unary.fdsl  expr_04_bool.fdsl
(+765 files in other folders)
