[project]
name = "functionality-dsl-backend"
version = "0.1.0"
description = "Generated backend for FunctionalityDSL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[tool.uvicorn]
factory = true
app = "app.main:create_app"
host = "0.0.0.0"
port = 8080
reload = true
