[project]
name = "functionality-dsl-backend"
version = "0.1.0"
description = "Generated backend for FunctionalityDSL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.6.0",
  "pydantic-settings>=2.0",
  "httpx>=0.27.0",
  "websockets>=11,<13",
  "xmltodict>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests",
  "types-python-dateutil",
]

[tool.setuptools]
packages = ["app"]

[tool.uvicorn]
factory = true
app = "app.main:create_app"
host = "0.0.0.0"
port = 8080
reload = true

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
