[project]
name = "functionality-dsl-backend"
version = "0.1.0"
description = "Generated backend for FunctionalityDSL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.6.0",
  "pydantic-settings>=2.0",
  "httpx>=0.27.0",
  "websockets>=11,<13",
  "xmltodict>=0.13.0",
  "Pillow>=10.0.0",
  "reportlab",
  "pyjwt>=2.8.0",
  "sqlmodel>=0.0.22",
  "psycopg2-binary>=2.9.9",
  "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1.0",
  "coverage[toml]>=7.4.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests",
  "types-python-dateutil",
]

[tool.setuptools]
packages = ["app"]

[tool.uvicorn]
factory = true
app = "app.main:create_app"
host = "0.0.0.0"
port = 8080
reload = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["venv", ".venv", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
